# ClangCoverage

./: Dockerfile  docker-compose.yml
work/: .gitignore  CMakeLists.txt  build_clang_sanitizer.sh  main.cpp  run_coverage.sh  tmp.cpp  tmp.h  unit_test_main.cpp
work/cmake/: clang_tools.cmake
